# sigma-rust

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.caargo/: config.toml
.github/workflows/: audit.yml  ci.yml  rust.yml
examples/: detect.rs
src/: detection.rs  error.rs  event.rs  field.rs  lib.rs  rule.rs  selection.rs
src/detection/: ast.rs  lexer.rs
src/field/: modifier.rs  transformation.rs  value.rs
tests/: json_events.rs  matching.rs  parse_keywords_rule.rs  parse_null_fields.rs  parse_sigma_main_rules.rs  test_parse_field_list.rs
