[package]
name = "sigma-rust"
description = "A library for parsing and evaluating Sigma rules to create custom detection pipelines"
version = "0.3.0"
edition = "2021"
authors = ["Dr.-Ing. Johannes Pohl <johannes.pohl90@gmail.com>"]
categories = ["parser-implementations", "data-structures"]
keywords = ["sigma", "sigma-rules", "siem", "detection", "security"]
readme = "README.md"
rust-version = "1.81.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jopohl/sigma-rust"

[dependencies]
base64 = "0.22.1"
cidr = "0.3.0"
glob-match = "0.2.1"
fancy-regex = "*"
serde = { version = "1.0.210", features = ["derive"] }
serde_yml = "0.0.12"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
serde_json = { version = "1.0.132", optional = true }
lazy_static = "*"

[dev-dependencies]
walkdir = "2.5.0"


[features]
default = ["serde_json"]
